# harmonia

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: ci.yml
docs/adr/: 0001-partitioned-coupling-boundary.md
examples/: coupled_decay.rs
src/: lib.rs
src/coupling/: mod.rs
src/coupling/pair/: algorithm.rs  error.rs  mod.rs  model.rs  report.rs  workspace.rs
src/partition/: contract.rs  mod.rs  substep.rs
src/relaxation/: contract.rs  error.rs  fixed.rs  full.rs  mod.rs
src/transfer/: contract.rs  error.rs  identity.rs  index.rs  mod.rs
tests/: allocation.rs  codegen_equivalence.rs  generic_scalar.rs  policies.rs  properties.rs  subcycling.rs  theorems.rs
tests/support/: mod.rs
